# dune-monorepo

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  Brewfile  Makefile  README.md  compare_smoothing.py  kill winder interface.bat  kill_legacy_server.bat  package-lock.json  package.json  plot_tension_data.py  plot_wire_measurements.py  pyproject.toml  pytest.ini  run-dune-winder.bat  run_dune_tension.sh  skills-lock.json  tension_analysis_gui.py  test_results.txt  ty.toml
dune_tension/: .audio_processor.py.swp  .gitignore  .main.py.swp  .~lock.TensionGcodeOye.ods#  ARCHITECTURAL_CHANGES_PROPOSAL.md  G_A_FULL.df  G_A_SAMPLE.df  G_A_SAMPLE.json  G_B_FULL.df  G_B_FULL.json  G_B_SAMPLE.df  G_B_SAMPLE.json  Output (copy).csv  Output.csv  README.md  Tensiometer.py  TensionGcodeOye.csv  TensionGcodeOye.ods  TensionGcodeOye.xlsx  U1_A_SAMPLE_.df  U1_A_SAMPLE_.json  U1_B_SAMPLE.df  U2_A_SAMPLE_.df  U2_A_SAMPLE_.json  U2_B_SAMPLE.df  U2_B_SAMPLE.json  UKAPA7U.json  U_FULL_A_Z1.df  U_FULL_A_Z1.json  U_FULL_A_Z1_DIAG.df  U_FULL_A_Z1_DIAG.json  U_FULL_A_Z2.df  U_FULL_A_Z2.json  U_FULL_A_Z4.df  U_FULL_A_Z4.json  U_FULL_A_Z5.df  U_FULL_A_Z5_DIAG.df  U_FULL_A_Z5_DIAG.json  U_FULL_B_Z1.df  U_FULL_B_Z1_DIAG.df  (+87 more)
dune_tension/APAcalibrationFiles/: Apr22_tension_calibration.json  Wood_tension_calibration.json  w_tension_calibration.json
dune_tension/DUNE-tension/: pyproject.toml
dune_tension/DUNE-tension/dune_tension/: frequencyLogger.py
dune_tension/data/: .~lock.frequency_data_US_APA4_V.csv#  experiment_measurements.db  frequency_data_US_APA4_G.csv  frequency_data_US_APA4_V.csv  frequency_data_US_APA5_X.csv  onewire.txt  processed_wire_data.csv  tension_data_US_APA5_X.csv  tension_measurements.db  uuid_lut.csv
dune_tension/data/bad_wires/: bad_wires_log_USAPA4_G.txt  bad_wires_log_USAPA4_U.txt  bad_wires_log_USAPA5_G.txt  bad_wires_log_USAPA5_U.txt  bad_wires_log_USAPA6_U.txt  bad_wires_log_USAPA999_G.txt  bad_wires_log_US_APA999_V.txt
dune_tension/data/badwires/: badwires_APA-UK-008_X.txt  badwires_APA-US-001_G.txt  badwires_APA-US-001_X.txt  badwires_APAUK007_G.txt  badwires_APAUK007_U.txt  badwires_APAUK007_V.txt  badwires_UKAPA7_G.txt  badwires_UKAPA7_U.txt  badwires_USAP10_X.txt  badwires_USAPA10*_X.txt  badwires_USAPA101_G.txt  badwires_USAPA10TEST_V.txt  badwires_USAPA10TEST_X.txt  badwires_USAPA10_G.txt  badwires_USAPA10_U.txt  badwires_USAPA10_V.txt  badwires_USAPA10_X.txt  badwires_USAPA10__G.txt  badwires_USAPA10v2_V.txt  badwires_USAPA11_G.txt  badwires_USAPA11_U.txt  badwires_USAPA11_V.txt  badwires_USAPA11_X.txt  badwires_USAPA12_V.txt  badwires_USAPA12_X.txt  badwires_USAPA12b_X.txt  badwires_USAPA4_V.txt  badwires_USAPA5_V.txt  badwires_USAPA5_X.txt  badwires_USAPA6_G.txt  badwires_USAPA7_G.txt  badwires_USAPA7_U.txt  badwires_USAPA7_V.txt  badwires_USAPA7_X.txt  badwires_USAPA8_U.txt  badwires_USAPA999_G.txt  badwires_USAPA999_V.txt  badwires_USAPA9_G.txt  badwires_USAPA9_U.txt  badwires_USAPA9_V.txt  (+6 more)
dune_tension/data/noise_filters/: stationary_noise_sr44100_n220500_win11760_hop5880.npz  stationary_noise_sr44100_n88200_win14700_hop7350.npz
dune_tension/data/pesto_onnx/: mir-1k_g7_confidence.onnx  mir-1k_g7_encoder.onnx  mir-1k_g7_manifest.json
dune_tension/data/tension_data/: tension_data.db  (+18 more)
dune_tension/docs/: refactoring_audit.md  streaming_implementation.md  streaming_plan.md  streaming_status.md  ukapa7_u_offset_report.md  ukapa7_u_side_comparison_report.md
dune_tension/experimental_data/: compare_four.py  compare_jig.py  four_passes.csv  gmm_parameters.csv  rename_audio.py  tension_data_US_APA999_G.csv
dune_tension/experiments/: README.md
dune_tension/m2m/: client_credentials.py  common.py  frameInspections.py  template_get_record.py  template_upload_tensions.py  tensions.py
dune_tension/src/: servotest.py  spacebar_pitch_cli.py  streamTest.py  valve_trigger.py
dune_tension/tensionTestingApp/: apa.py  audio_processor.py  config.json  config_manager.py  device_manager.py  maestro.py  main.py  plotter.py  tensiometer.py  ui_manager.py
dune_tension/tests/: test_analyze.py  test_audio_spoof.py  test_crepe_analysis.py  test_data_cache.py  test_dummy_servo.py  test_gui_actions.py  test_gui_app.py  test_gui_logging_panel.py  test_gui_state.py  test_live_plots.py  test_logging.py  test_maestro_ports.py  test_main_dependencies.py  test_motion_position_sources.py  test_noise_subtraction.py  test_pesto_analysis.py  test_plc_moves.py  test_plc_spoof.py  test_plc_transport.py  test_results.py  test_services.py  test_streaming_foundation.py  test_streaming_runtime_and_controller.py  test_summaries.py  test_tensiometer.py  test_tensiometer_functions.py  test_tensiometer_live_callbacks.py  test_waveform_dataset.py
dune_tension/tools/: README.md  plot_cached_audio.py  servotest.py  spice.py
dune_tension/web/: Experiment.css  Experiment.html  Experiment.js
dune_tension/wire_lengths/: U_LUT.csv  V_LUT.csv
dune_winder/: .gitignore  README.md  configuration.toml  configuration.xml  dune-winder.allium  head-transfer.allium  plc-motion.allium  pyproject.toml  u-layer-recipe.allium  uv-layer-geometry.allium  winder-states-safety.allium
dune_winder/.agents/: AGENTS.md
dune_winder/.claude/: CLAUDE.md
dune_winder/config/: machineCalibration.json
dune_winder/docs/: failing-tests.md
dune_winder/gc_files/: V-layer.gc
dune_winder/plc/: EOT_Trip_11  Error_State_10  HMI_Stop_Request_14  Latch_UnLatch_State_6_7_8  MoveXY_State_2_3  MoveZ_State_4_5  PHASE_C_HANDLER_THINNING_TODO.md  PID_Tension_Servo  RLL_FORMAT.md  Ready_State_1  UnServo_9  controller_level_tags.json  instruction_set.md  manifest.json  motionQueue  tags.toml  xz_move  yz_move
dune_winder/plc_monoroutine/: manifest.json
dune_winder/tests/: test_command_validation.py  test_g_code_handler_safety.py  test_main.py  test_manual_calibration.py  test_plc_ladder_metadata.py  test_plc_ladder_parser.py  test_plc_ladder_runtime.py  test_sim_plc_commands.py  test_web_api_v2.py
dune_winder/tools/: check_plc_queue_cap.py  check_z_move_paths.py  plc_pycomm3_check.py
rust/: Cargo.toml  README.md
(+1001 files in other folders)
