[project]
name = "dune-monorepo"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["dune-winder", "dune-tension"]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.9.9"]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.sources]
dune-winder = { workspace = true }
dune-tension = { workspace = true }

[tool.uv.workspace]
members = ["dune_winder", "dune_tension"]
