[project]
name = "dune-tension"
version = "0.1.0"
description = "Measure wire tension through GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crepe>=0.0.16",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pesto-pitch>=2.0.1",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.2",
    "tensorflow>=2.19.0",
]
