[project]
name = "dune-tension"
version = "0.1.0"
description = "Measure wire tension through GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.10.3",
    "nnaudio>=0.3.3",
    "pandas>=2.3.0",
    "pesto-pitch>=2.0.1",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.2",
]

[project.scripts]
dune-tension-gui = "dune_tension.main:main"
dune-tension-periodic-plots = "dune_tension.periodic_save_plots:main"
dune-tension-stream-sweep = "dune_tension.streaming.cli:main_stream_sweep"
dune-tension-stream-rescue = "dune_tension.streaming.cli:main_stream_rescue"
dune-tension-fit-focus = "dune_tension.streaming.cli:main_fit_focus"
dune-tension-stream-replay = "dune_tension.streaming.cli:main_stream_replay"
dune-spectrum-compare = "spectrum_analysis.compare_pitch_cli:main"
dune-spectrum-scroller = "spectrum_analysis.cli:main"
