[workspace]
members = [
    "crates/dune-audio",
    "crates/dune-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/dune/dune-monorepo"
rust-version = "1.83"

[workspace.dependencies]
anyhow = "1.0"
cpal = "0.17.3"
ndarray = "0.17"
numpy = "0.28"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
pyo3 = "0.28.3"
realfft = "3.5"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

