[workspace]
members = [
    "crates/dune-audio",
    "crates/dune-python",
    "crates/dune_tension_core",
    "crates/dune-winder-domain",
    "crates/dune-winder-geometry",
    "crates/dune-winder-safety",
    "crates/dune-winder-plc",
    "crates/dune-winder-mirror",
    "crates/dune-winder-control",
    "crates/dune-winder-transfer",
    "crates/dune-winder-recipe",
    "crates/dune-winder-workflows",
    "crates/dune-winder-api",
    "crates/dune-winder-host",
    "crates/dune-winder-elm-codegen",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/dune/dune-monorepo"
rust-version = "1.83"

[workspace.dependencies]
anyhow = "1.0"
cpal = "0.17.3"
ndarray = "0.17"
numpy = "0.28"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
pyo3 = "0.28.3"
realfft = "3.5"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Winder host shared deps
arc-swap = "1.7"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
proptest = "1.5"
rust-ethernet-ip = "0.7"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winnow = "0.6"
