[tool.poetry]
name = "dune-tension"
version = "0.1.0"
description = ""
authors = ["typhoon <benjamin.oye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pvrecorder = "^1.2.2"
tensorflow = "^2.16.1"
crepe = "^0.0.14"
sounddevice = "^0.4.6"
getch = "^1.0"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
