[package]
name = "dune-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
cpal-capture = ["dep:cpal"]

[dependencies]
anyhow.workspace = true
cpal = { workspace = true, optional = true }
ndarray.workspace = true
ort.workspace = true
realfft.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.25"
