[package]
name = "dune-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_rust_audio"
crate-type = ["cdylib"]

[features]
default = []
cpal-capture = ["dune-audio/cpal-capture"]

[dependencies]
anyhow.workspace = true
dune-audio = { path = "../dune-audio" }
ndarray.workspace = true
numpy.workspace = true
pyo3 = { workspace = true, features = ["extension-module", "abi3-py312"] }
