[package]
name = "dune-winder-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
dune-winder-domain = { path = "../dune-winder-domain" }
dune-winder-mirror = { path = "../dune-winder-mirror" }
dune-winder-workflows = { path = "../dune-winder-workflows" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
