[package]
name = "dune-winder-elm-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "dune-winder-elm-codegen"
path = "src/main.rs"

[dependencies]
dune-winder-domain = { path = "../dune-winder-domain" }
anyhow = { workspace = true }
clap = { workspace = true }
