[package]
name = "dune-winder-geometry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
dune-winder-domain = { path = "../dune-winder-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
