[package]
name = "dune-winder-plc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
dune-winder-domain = { path = "../dune-winder-domain" }
async-trait = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
rust-ethernet-ip = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
