[package]
name = "dune-winder-safety"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
dune-winder-domain = { path = "../dune-winder-domain" }
dune-winder-geometry = { path = "../dune-winder-geometry" }
thiserror = { workspace = true }
