[package]
name = "dune_plc_bus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
pyo3 = ["dep:pyo3"]
extension-module = ["pyo3", "pyo3/extension-module", "pyo3/abi3-py312"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
pyo3 = { workspace = true, optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
trybuild = "1.0"
