[package]
name = "dune_tension_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "dune_tension_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py312"] }
rand = "0.8"
rand_distr = "0.4"
numpy = { workspace = true }
anyhow = { workspace = true }
dune-audio = { path = "../dune-audio", features = ["cpal-capture"] }
dune_geometry = { path = "../dune_geometry" }

